Fix leaderboard overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,6 @@
 html * {
   margin: 0;
   font-family: "Jockey One", sans-serif;
-  overflow: hidden;
 }
 button {
   box-shadow: 0 0.275rem 1.125rem rgba(0,0,0,.25), inset 0 0.0625rem 0 hsla(0,0%,100%,.2), inset 0 -0.125rem 0 rgba(0,0,0,.3);
